# prompt-calibrated-hallucination-detection

./: .gitignore  CLAUDE.md  DSG_ALGORITHM.md  GAF_paper_consolidated.tex  MANIFEST.in  MECHANISTIC_APPROACH_SUMMARY.md  PROPOSAL.md  README.md  RELEASE_CHECKLIST.md  RESEARCH_AUDIT.md  SAR_paper_consolidated.tex  SYNTHESIS.md  StreamingLLM_paper_consolidated.tex  ag-sar-proposal.md  pyproject.toml  reproduce_paper.sh  requirements-lock.txt  requirements.txt  run_final_matrix.sh  run_full_evaluation.py  run_golden.sh  run_icml_staged.sh  run_optimized.sh  setup.py  smoke_test.py
_legacy/: README.md
ag_sar/: __init__.py  ag_sar.py  attention_extractor.py  attention_graph.py  calibration.py  centrality.py  config.py  detector.py  engine.py  fusion.py  head_filter.py  hooks.py  multi_gpu.py  numerics.py  signals.py  uncertainty.py  utils.py
benchmarks/: benchmark_latency.py  compare_baselines.py  compare_baselines_parallel.py  loaders.py  run.py  run_icml_comparison.py
conductor/: product-guidelines.md  product.md  tech-stack.md
configs/: llama3.2_truth_heads.json
design_docs/: task_adaptive_mode.md
docs/: README.md  SC-AGSAR_proposal.md  evaluation_analysis.md  mcss_review_plan.md  objectives.md
eval/: __init__.py  config.py  datasets.py  experiment_utils.py  nli_labeler.py
evaluation/: __init__.py  answer_matching.py  input_builder.py  metrics.py
examples/: minimal_demo.py
experiments/: __init__.py  __main__.py  ablation.py  answer_matching.py  common.py  eval.py  loaders.py  main.py  metrics.py  preflight.py  run_ablation.py  run_eval.py  run_evaluation.py  schema.py  verify_llama_jepa.py
legacy_research/: 05_mechanism_ablation.yaml  README.md  test_centrality.py  test_e2e_pipeline.py  test_triton_centrality.py
paper/: main.tex  notation_mapping.md  references.bib  utils.py
papers/: 2510.04933.md  burns2022_discovering_latent.md  chen2024_inside_llm.md  chuang2024_lookback_lens.md  dola_2309.03883.md  duan2024_llms_know.md  eigentrack.md  freq_attn.md  gsp_hallu_2510.19117.md  halluzig.md  ji2023_towards_mitigating.md  kadavath2022_self_knowledge.md  lapeigvals.md  li2024_inference_time_hallu.md  (+14 more)
(+374 files in other folders)
