[project]
name = "ag-sar"
version = "0.1.0"
description = "Aggregated Signal Architecture for Risk — zero-shot, training-free hallucination detection via 5 mechanistic signals"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5.1",
    "transformers>=4.57.0",
    "accelerate>=1.12.0",
    "numpy>=2.0.0",
    "scipy>=1.14.1",
    "scikit-learn>=1.5.2",
    "torchmetrics>=1.6.0",
    "datasets>=4.0.0",
    "tqdm>=4.66.3",
    "pyyaml>=6.0.2",
]

[project.scripts]
ag-sar-eval = "experiments.eval:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ag_sar", "experiments"]
